# raincoat

./: .gitignore  CMakeLists.txt  README.md  install.sh
assets/fontconfig/: fonts.conf
docs/: DESIGN.md  EGRESS.md  FINGERPRINT-SYSCALLS.md  GUI-MACOS.md  INSTALL.md  MACOS.md  MOUNT-REMAP.md  PROGRESS.md  ROADMAP.md  SPEC.md  full-config-reference.toml
examples/: ai-agent.toml  api-agent.toml  browser.toml  egress.toml  guarded.toml  node-build.toml  paranoid.toml  python-tool.toml  strict.toml
macos-app/: .gitignore  Package.swift  README.md  project.yml
macos-app/App/: Info.plist  Raincoat.entitlements  main.swift
macos-app/App/Assets.xcassets/AppIcon.appiconset/: Contents.json
macos-app/Raincoat.xcodeproj/: project.pbxproj
macos-app/Raincoat.xcodeproj/xcshareddata/xcschemes/: Raincoat.xcscheme
macos-app/Sources/RaincoatMenuBar/: main.swift
macos-app/Sources/RaincoatMenuBar/App/: AppDelegate.swift  SelfTest.swift
macos-app/Sources/RaincoatMenuBar/Launcher/: AppIndex.swift  HotKeyManager.swift  LaunchService.swift
macos-app/Sources/RaincoatMenuBar/Model/: Capabilities.swift  RunStatus.swift
macos-app/Sources/RaincoatMenuBar/Preferences/: HotKeyRecorderView.swift  LoginItem.swift  PreferencesWindowController.swift
macos-app/Sources/RaincoatMenuBar/Runtime/: DirectoryWatcher.swift  Liveness.swift  RunStore.swift
macos-app/Sources/RaincoatMenuBar/Support/: Defaults.swift  Log.swift
macos-app/Sources/RaincoatMenuBar/Tray/: TrayController.swift
macos-app/Sources/RaincoatMenuBarKit/: Entry.swift  Info.plist
macos-app/Sources/RaincoatMenuBarKit/App/: AppDelegate.swift  SelfTest.swift
macos-app/Sources/RaincoatMenuBarKit/Install/: RaincoatInstaller.swift
macos-app/Sources/RaincoatMenuBarKit/Launcher/: AppSandboxProbe.swift  FuzzyMatcher.swift  LaunchService.swift  LauncherController.swift  LauncherPanel.swift  RaincoatLocator.swift  Recents.swift  SearchItem.swift
macos-app/Sources/RaincoatMenuBarKit/Preferences/: KeyCombo.swift  PreferencesWindowController.swift
macos-app/Sources/RaincoatMenuBarKit/Runtime/: Liveness.swift  RunPaths.swift
macos-app/Sources/RaincoatMenuBarKit/Support/: Defaults.swift
macos-app/Sources/RaincoatMenuBarKit/Tray/: TrayController.swift
macos-app/scripts/: build-appicon.sh  embed-raincoat.sh  make-app-bundle.sh  make-appicon.swift  raincoat-helper.entitlements
packaging/aur/: PKGBUILD
packaging/homebrew/: raincoat.rb
src/: audit.cpp  audit.hpp  backend.hpp  backend_linux.cpp  backend_macos.cpp  browser.cpp  browser.hpp  bwrap.cpp  bwrap.hpp  cli.cpp  cli.hpp  config.hpp  doctor.cpp  doctor.hpp  egress.cpp  egress.hpp  env_guard.cpp  env_guard.hpp  font_guard.cpp  font_guard.hpp  fs_guard.cpp  fs_guard.hpp  init.cpp  init.hpp  main.cpp  net_guard.cpp  net_guard.hpp  profile.cpp  profile.hpp  proxy.cpp  proxy.hpp  rc_interpose.c  report.cpp  report.hpp  run_status.cpp  run_status.hpp  runner.cpp  runner.hpp  seatbelt.cpp  seatbelt.hpp  (+6 more)
tests/: rc_test_timeout.h  test_audit.cpp  test_backend_golden_argv.cpp  test_browser.cpp  test_browser_attack_round1.cpp  test_browser_attack_round2.cpp  test_browser_attack_round2_regression.cpp  test_browser_disabled_regression.cpp  test_browser_path_e2e_regression.cpp  test_bwrap.cpp  test_bwrap_attack2_regression.cpp  test_bwrap_font_mask_regression.cpp  test_cli.cpp  test_doctor.cpp  test_egress.cpp  test_egress_attack2_regression_honesty.cpp  test_egress_attack3_regression_honesty.cpp  test_egress_attack3_smuggling_teardown.cpp  test_egress_audit_ro_leak_attack.cpp  test_egress_e2e.cpp  test_egress_jail_netns.cpp  test_egress_jail_pasta_failure_regression.cpp  test_egress_regression_honesty_attack.cpp  test_env_guard.cpp  test_ext_enforcement_attack.cpp  test_ext_enforcement_attack2.cpp  test_ext_enforcement_attack3.cpp  test_font_guard.cpp  test_font_local_mask_missing_dir_regression.cpp  test_font_local_share_leak_attack.cpp  test_fs_guard.cpp  test_init.cpp  test_integration.cpp  test_net_guard.cpp  test_network_policy_regression_honesty.cpp  test_profile.cpp  test_proxy.cpp  test_proxy_attack_round1.cpp  test_proxy_attack_round2.cpp  test_proxy_attack_round3_env_case.cpp  (+12 more)
